--- a/index.html
+++ b/index.html
@@ -16,10 +16,25 @@
 
 </head>
 <body>     
+
     <div class="container-fluid container-sm">
 
-        <h1 class="title display-1 text-center mb-5 mt-5">Gunita</h1>
-        <img src="assets/couple_bicycle.png" class="img-fluid img-thumbnail" alt="">
+        <nav class="nav navbar sticky-top justify-content-end">
+            <ul class="nav navbar">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+            </ul>
+        </nav>
+
+        <h1 class="title text-center mb-5 mt-5">Gunita</h1>
+        <img src="assets/Gunita.png" class="logo img-fluid" alt="">
 
     </div>
 
