--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 </head>
 <body>     
 
-    <div class="container-fluid container-sm">
-
-        <nav class="nav navbar sticky-top justify-content-end">
-            <ul class="nav navbar">
+    <nav class="nav navbar sticky-top justify-content-end">
+            <img src="" alt="">
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Home</a>
                 </li>
@@ -33,8 +31,33 @@
             </ul>
         </nav>
 
+    <div class="container-fluid container-sm">
+
         <h1 class="title text-center mb-5 mt-5">Gunita</h1>
-        <img src="assets/Gunita.png" class="logo img-fluid" alt="">
+        
+
+        <div class="row">
+
+            <div class="col-sm-3">
+                <img src="assets/Gunita.png" class="logo img-fluid" alt="">
+            </div>
+
+            <div class="mt-4 col-sm-6 col-xxl-8">
+                <p class="txt text-justify mx-auto lead">
+                    In every captured moment lies a piece of our love story, soft glances, 
+                    quiet laughs, and stolen kisses frozen in time.
+                </p>
+                <p class="txt text-justify mx-auto lead">
+                    Gunita is where our memories live, 
+                    gently reminding us that no matter how fast the world moves, our love is always worth remembering.
+                </p>
+
+                
+                <button class="newBtn btn btn-primary mt-4" type="button">Get started</button>
+
+            </div>
+
+        </div>
 
     </div>
 
