--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
         <div class="row">
 
-            <div class="col-sm-3">
+            <div class="col-sm-3 col-lg-4 col-md-5">
                 <img src="assets/Gunita.png" class="logo img-fluid" alt="">
             </div>
 
-            <div class="mt-4 col-sm-6 col-xxl-8">
+            <div class="col-sm-6 col-md-7 col-lg-8 col-xxl-8">
                 <p class="txt text-justify mx-auto lead">
                     In every captured moment lies a piece of our love story, soft glances, 
                     quiet laughs, and stolen kisses frozen in time.
